// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mount function Basic function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos
    </p>
    
            
  </div>
</body>
`;

exports[`Mount function Computed function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        24
      </span>
    </p>
    
            
  </div>
</body>
`;

exports[`Mount function Computed w/ State function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        uno
      </span>
    </p>
    
            
  </div>
</body>
`;
